Added Dtos and changes autogenerated Client Method names
