# LegalHawk.Backend.Client/swagger.json
@@ -10,6 +10,7 @@
         "tags": [
           "LegalContracts"
         ],
+        "operationId": "GetLegalContractsAsync",
         "parameters": [
           {
             "name": "Filters",
@@ -48,7 +49,27 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OkListResponse",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/LegalContractListDtoOkListResponse"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LegalContractListDtoOkListResponse"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LegalContractListDtoOkListResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "NotFound"
           }
         }
       },
@@ -56,6 +77,7 @@
         "tags": [
           "LegalContracts"
         ],
+        "operationId": "CreateLegalConractAsync",
         "requestBody": {
           "content": {
             "application/json": {
@@ -76,8 +98,25 @@
           }
         },
         "responses": {
-          "200": {
-            "description": "OK"
+          "201": {
+            "description": "CreatedResponse",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/LegalContractDetailDtoOkListResponse"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LegalContractDetailDtoOkListResponse"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LegalContractDetailDtoOkListResponse"
+                }
+              }
+            }
           }
         }
       }
@@ -87,6 +126,7 @@
         "tags": [
           "LegalContracts"
         ],
+        "operationId": "GetLegalContractByIdAsync",
         "parameters": [
           {
             "name": "id",
@@ -100,7 +140,27 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OkListResponse",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/LegalContractDetailDtoOkListResponse"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LegalContractDetailDtoOkListResponse"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LegalContractDetailDtoOkListResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "NotFound"
           }
         }
       },
@@ -108,6 +168,7 @@
         "tags": [
           "LegalContracts"
         ],
+        "operationId": "DeleteLegalContractById",
         "parameters": [
           {
             "name": "id",
@@ -120,8 +181,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "404": {
+            "description": "NotFound"
           }
         }
       }
@@ -156,6 +217,148 @@
             "description": "A short description of the legal contract",
             "nullable": true,
             "example": "The contract is about the sale of a car, the car is a 2020 model and has a mileage of 1000km, the car is in good condition."
+          }
+        },
+        "additionalProperties": false
+      },
+      "LegalContractDetailDto": {
+        "required": [
+          "author",
+          "title"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "title": {
+            "type": "string",
+            "nullable": true
+          },
+          "author": {
+            "type": "string",
+            "nullable": true
+          },
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "modifiedAt": {
+            "type": "string",
+            "format": "date-time"
+          }
+        },
+        "additionalProperties": false
+      },
+      "LegalContractDetailDtoOkListResponse": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "integer",
+            "description": "The HTTP response status codes",
+            "format": "int32",
+            "nullable": true
+          },
+          "data": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/LegalContractDetailDto"
+            },
+            "nullable": true
+          },
+          "description": {
+            "type": "string",
+            "description": "A text describing the response",
+            "nullable": true
+          },
+          "message": {
+            "type": "string",
+            "description": "A response message delivered with the response",
+            "nullable": true
+          },
+          "count": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "totalCount": {
+            "type": "integer",
+            "format": "int32"
+          }
+        },
+        "additionalProperties": false
+      },
+      "LegalContractListDto": {
+        "required": [
+          "author",
+          "title"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "title": {
+            "type": "string",
+            "nullable": true
+          },
+          "author": {
+            "type": "string",
+            "nullable": true
+          },
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "modifiedAt": {
+            "type": "string",
+            "format": "date-time"
+          }
+        },
+        "additionalProperties": false
+      },
+      "LegalContractListDtoOkListResponse": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "integer",
+            "description": "The HTTP response status codes",
+            "format": "int32",
+            "nullable": true
+          },
+          "data": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/LegalContractListDto"
+            },
+            "nullable": true
+          },
+          "description": {
+            "type": "string",
+            "description": "A text describing the response",
+            "nullable": true
+          },
+          "message": {
+            "type": "string",
+            "description": "A response message delivered with the response",
+            "nullable": true
+          },
+          "count": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "totalCount": {
+            "type": "integer",
+            "format": "int32"
           }
         },
         "additionalProperties": false
